--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import '~@fortawesome/fontawesome-free/css/all.css';
+
+body {
+  font-family: "Consolas";
+  background-color: #f8f9fa !important;
+}
