--- a/src/index.scss
+++ b/src/index.scss
@@ -2,5 +2,6 @@
 @import '~@fortawesome/fontawesome-free/css/all.css';
 
 body {
+  font-family: "Consolas";
   background-color: #f8f9fa !important;
 }
